[tool.poetry]
name = "actions"
version = "0.1.0"
description = ""
authors = ["amisonnet8 <amisonnet8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
black = "^23.3.0"
ruff = "^0.0.270"
mypy = "^1.3.0"
nox = "^2023.4.22"
pre-commit = "^3.3.2"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
